tests/snapshots/03_church__add_two_one.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/03_church/add_two_one.lam
---
3

term
  nodes: 43
  depth: 11

eval
  steps:    18
  reduces:  18
  allocs:   46
  time:     [time]
