tests/snapshots/03_church__exponent.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/03_church/exponent.lam
---
8

term
  nodes: 32
  depth: 9

eval
  steps:    19
  reduces:  19
  allocs:   48
  time:     [time]
