tests/snapshots/03_church__is_zero.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/03_church/is_zero.lam
---
true

term
  nodes: 21
  depth: 9

eval
  steps:    5
  reduces:  5
  allocs:   5
  time:     [time]
