tests/snapshots/03_church__leq_true.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/03_church/leq_true.lam
---
true

term
  nodes: 122
  depth: 25

eval
  steps:    86
  reduces:  86
  allocs:   231
  time:     [time]
