tests/snapshots/03_church__mul_two_three.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/03_church/mul_two_three.lam
---
6

term
  nodes: 48
  depth: 13

eval
  steps:    36
  reduces:  36
  allocs:   99
  time:     [time]
