tests/snapshots/03_church__subtraction_positive.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/03_church/subtraction_positive.lam
---
3

term
  nodes: 102
  depth: 21

eval
  steps:    136
  reduces:  136
  allocs:   359
  time:     [time]
